--- a/src/Componets/Clock.css
+++ b/src/Componets/Clock.css
@@ -1,3 +1,5 @@
+
+ 
  li{
     font-style: bold;
     list-style-type: none;
@@ -10,3 +12,19 @@
     margin-right: auto;
     padding: 5px;
 }
+
+
+.card {
+    display: flex;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
+    width: 440px;
+    background-color: #7D96DF;
+    color: darkblue;
+  }
+  
+  .card-title {
+    font-weight: bold;
+  }
