updated colors and background

--- a/src/Componets/Clock.css
+++ b/src/Componets/Clock.css
@@ -20,7 +20,7 @@ li {
   margin-right: auto;
   margin-bottom: 15px;
   width: 440px;
-  background-color: #6bc7b2;
+  background-color: #fff;
   color: #3c3cd6;
 }
 
